--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "mongodb": "^4.5.0",
     "next": "12.1.4",
     "react": "18.0.0",
